...
    [self createTableContentsWithAnimation:UITableViewRowAnimationNone];
    [self.tableView reloadData];
    
    [[NSNotificationCenter defaultCenter]
        addObserver:self
           selector:@selector(localeChanged:)
               name:NSCurrentLocaleDidChangeNotification
             object:nil];
}



#pragma mark -
...
                     inManagedObjectContext:_managedObjectContext
                        forceOdometerUpdate:YES];

        // Reinsert new version of event
        _event = [AppDelegate addToArchiveWithCar:_car
                                             date:_date
                                         distance:_distance
                                            price:_price
                                       fuelVolume:_fuelVolume
                                         filledUp:_filledUp
                           inManagedObjectContext:_managedObjectContext
                              forceOdometerUpdate:YES];
        
        [(AppDelegate *)[[UIApplication sharedApplication] delegate] saveContext:_managedObjectContext];
    }
...
