...
                        <rightBarButtonItems>
                            <barButtonItem systemItem="action" id="8dO-W6-4u6">
                                <connections>
                                    <action selector="showExportSheet:" destination="MNb-cq-XuY" id="5kq-BM-AzK"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Chart" image="chart.bar" catalog="system" id="6lO-V7-YIT">
                                <connections>
                                    <segue destination="ryK-w1-KVA" kind="presentation" destinationCreationSelector="showStatistics:" id="IuH-l4-xPN"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="Cpb-38-EcT" customClass="UIImageView">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NRn-ON-A3B" userLabel="Dismiss">
                                <rect key="frame" x="345.33333333333331" y="28.666666666666671" width="19.666666666666686" height="22"/>
                                <accessibility key="accessibilityConfiguration" label="close"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" image="xmark.circle" catalog="system"/>
                                <connections>
                                    <segue destination="96w-9C-axi" kind="unwind" unwindAction="unwindToFuelEvents:" id="B3y-Nm-ayC"/>
                                </connections>
                            </button>
...
                                        <connections>
                                            <action selector="buttonAction:" destination="9BC-sJ-APF" eventType="touchUpInside" id="k8W-Y7-reo"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" tag="60" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9fS-rb-iex" userLabel="Button (5Y)">
                                        <rect key="frame" x="220.00000000000003" y="0.0" width="35.999999999999972" height="32"/>
                                        <accessibility key="accessibilityConfiguration" identifier="5Y"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <size key="titleShadowOffset" width="0.0" height="-1"/>
                                        <state key="normal" title="5Y">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
