...
final class CarConfigurationController: PageViewController, UIViewControllerRestoration, EditablePageCellDelegate, EditablePageCellFocusHandler {
  var isShowingCancelSheet = false
  var dataChanged = false
  var previousSelectionIndex: IndexPath?

  var name: String?
  var plate: String?
  var odometerUnit: NSNumber?
  var odometer: Decimal?
  var fuelUnit: NSNumber?
  var fuelConsumptionUnit: NSNumber?

  var editingExistingObject = false
...
    super.viewDidLoad()

    recreateTableContents()

    // Configure the navigation bar
    let leftBarButtonItem = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(CarConfigurationController.handleSave(_:)))
    leftBarButtonItem.accessibilityIdentifier = "done"
    navigationItem.leftBarButtonItem = leftBarButtonItem
    navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(CarConfigurationController.handleCancel(_:)))
    navigationItem.title = editingExistingObject ? NSLocalizedString("Edit Car", comment: "") : NSLocalizedString("New Car", comment: "")

    // Remove tint from navigation bar
    navigationController?.navigationBar.tintColor = nil
...
