...

    // Navigation Bar
    title = NSLocalizedString("Cars", comment: "")
    navigationItem.leftBarButtonItem = nil

    let rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(CarViewController.insertNewObject(_:)))
    rightBarButtonItem.accessibilityIdentifier = "add"
    navigationItem.rightBarButtonItem = rightBarButtonItem

    // Gesture recognizer for touch and hold
    longPressRecognizer = UILongPressGestureRecognizer(target: self, action: #selector(CarViewController.handleLongPress(_:)))
    longPressRecognizer!.delegate = self

...
